Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47319

Qt 5.5 doesn't build with -qreal float on ARM

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.1
    • 5.5.0
    • GUI: Painting
    • None
    • 7089c98383e5e22ca1fbae9a4fff34b312810749

    Description

      When building Qt 5.5 on ARM with -qreal float configure option build fails due to some errors similar to the following error:

      painting/qpdf.cpp:1982:70: error: no matching function for call to 'qBound(double, const float&, double)'
                       b.start = step + 1 - qBound(0., stops.at(i).first, 1.);
                                                                            ^
      painting/qpdf.cpp:1982:70: note: candidate is:
      In file included from ../../include/QtCore/qglobal.h:1:0,
                       from kernel/qt_gui_pch.h:44:
      ../../include/QtCore/../../src/corelib/global/qglobal.h:543:34: note: template<class T> constexpr const T& qBound(const T&, const T&, const T&)
       Q_DECL_CONSTEXPR inline const T &qBound(const T &min, const T &val, const T &max)
                                        ^
      ../../include/QtCore/../../src/corelib/global/qglobal.h:543:34: note:   template argument deduction/substitution failed:
      painting/qpdf.cpp:1982:70: note:   deduced conflicting types for parameter 'const T' ('double' and 'float')
                       b.start = step + 1 - qBound(0., stops.at(i).first, 1.);
                                                                            ^
      painting/qpdf.cpp:1983:73: error: no matching function for call to 'qBound(double, const float&, double)'
                       b.stop = step + 1 - qBound(0., stops.at(i - 1).first, 1.);
                                                                               ^
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            davide.bettio Davide Bettio
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes