QPdfEnginePrivate - fix for '-qreal float' build.

Literals 1. or 0. have type double, but QGradientStop.first is qreal and
thus can be float depending on platform/configuration, making
qBound call invalid (qBound(0., qreal_value, 1.) for example).

Change-Id: Idab668d417a148bffe2495009ae700de980b73cc
Task-number: QTBUG-47319
Reviewed-by: Lars Knoll <lars.knoll@theqtcompany.com>

cregit: 7089c98383e5e22ca1fbae9a4fff34b312810749 https://github.com/qt/qtbase/commit/7089c98383e5e22ca1fbae9a4fff34b312810749