src/gui/painting/qpdf.cpp
@@ -10388,7 +10388,10 @@ literal|1
 operator|-
 name|qBound
 argument_list|(
+name|qreal
+argument_list|(
 literal|0.
+argument_list|)
 argument_list|,
 name|stops
 operator|.
@@ -10399,7 +10402,10 @@ argument_list|)
 operator|.
 name|first
 argument_list|,
+name|qreal
+argument_list|(
 literal|1.
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|b
@@ -10412,7 +10418,10 @@ literal|1
 operator|-
 name|qBound
 argument_list|(
+name|qreal
+argument_list|(
 literal|0.
+argument_list|)
 argument_list|,
 name|stops
 operator|.
@@ -10425,7 +10434,10 @@ argument_list|)
 operator|.
 name|first
 argument_list|,
+name|qreal
+argument_list|(
 literal|1.
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|b
@@ -10486,7 +10498,10 @@ name|step
 operator|+
 name|qBound
 argument_list|(
+name|qreal
+argument_list|(
 literal|0.
+argument_list|)
 argument_list|,
 name|stops
 operator|.
@@ -10497,7 +10512,10 @@ argument_list|)
 operator|.
 name|first
 argument_list|,
+name|qreal
+argument_list|(
 literal|1.
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|b
@@ -10508,7 +10526,10 @@ name|step
 operator|+
 name|qBound
 argument_list|(
+name|qreal
+argument_list|(
 literal|0.
+argument_list|)
 argument_list|,
 name|stops
 operator|.
@@ -10521,7 +10542,10 @@ argument_list|)
 operator|.
 name|first
 argument_list|,
+name|qreal
+argument_list|(
 literal|1.
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|b
